# SmartFarmProject

./: .gitignore  README.md
apps/: README.md
apps/backend/: README.md
data/samples/: README.md
docs/: Conveyor_Pi_Modbus_Client_Controller_구현_계획.md  Conveyor_ROI_Modbus_구현_계획.md  Conveyor_작업_메모.md  Dobot_비전_소켓_연동_계획.md  Dobot_작업_메모.md  Modbus_Server_작업_메모.md  R&R_초안.md  WBS_검토_메모.md  시스템_데이터_흐름_초안.md  작업_결정_메모.md  진행_로그.md  프로젝트_개요_및_초기_정리.md
docs/00_project/: 프로젝트_개요_및_초기_정리.md  프로젝트_착수_체크리스트.md
docs/10_architecture/: 시뮬레이션_현실_차이_메모.md  시스템_데이터_흐름_초안.md  아키텍처_보강_계획.md
docs/30_plans/: Conveyor_Modbus_Async_RaspberryPi_전환_계획.md  ROS2_workspace_src_구조_전환_계획.md  WBS_재검토_메모.md  프로젝트_폴더_구조_정리_계획.md
docs/40_logs/: 작업_결정_메모.md  진행_로그.md
docs/diagrams/: architecture_summary_v2.md  smartfarm_architecture_summary_v2.excalidraw
modbus/: README.md
modbus/shared_server/: README.md
references/: WBS.xlsx  architecture.md  스마트팜.txt
robot/dobot/: README.md
workspace/: README.md
workspace/src/: MIGRATION_MAP.md  README.md
workspace/src/turtlebot/: README.md  package.xml  setup.py
workspace/src/turtlebot/docs/: notion_turtlebot_sequence.md  runbook.md
workspace/src/turtlebot/map/: pjt_map.yaml
workspace/src/turtlebot/scripts/: check_topics.sh  env.sh  ssh_turtlebot.sh  start_nav_real.sh  start_nav_sim.sh
workspace/src/turtlebot/test/: test_turtlebot_modbus_heartbeat.py
workspace/src/turtlebot/turtlebot/: __init__.py
workspaces/: README.md
workspaces/지성/: README.md
workspaces/지웅/: README.md
workspaces/효진/: README.md
(+170 files in other folders)
