<?xml version="1.0"?>
<package format="3">
  <name>turtlebot</name>
  <version>0.1.0</version>
  <description>SmartFarmProject TurtleBot SLAM/Navigation helper package.</description>
  <maintainer email="ssafy@example.com">SSAFY</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
